syntax = "proto3";

package fixed32;

option go_package = "xgo/tests/pb/pbinvalid";

//import "google/protobuf/any.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";
//
//import "tests/proto/module/external.proto";

import "proto/json.proto";

message Fixed3202 {
  fixed32 field02 = 2 [ (json.field) = { format: { int64: { } } } ];
}
